parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> ADVP PUNCTUATION ADVP PUNCTUATION
Rule 2     S -> VP CP PUNCTUATION
Rule 3     S -> ADVP LPAREN INTERJECTIONS NP RPAREN PUNCTUATION
Rule 4     S -> ADVP LPAREN VP RPAREN PUNCTUATION
Rule 5     S -> ADVP PUNCTUATION
Rule 6     S -> VP LPAREN PP RPAREN PUNCTUATION
Rule 7     S -> CP LPAREN CP RPAREN PUNCTUATION
Rule 8     S -> VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
Rule 9     S -> ADVP VP PP LPAREN ADVP RPAREN PUNCTUATION
Rule 10    S -> VP NP PP PUNCTUATION
Rule 11    S -> VP ADVP ADJP PUNCTUATION
Rule 12    S -> VP LPAREN VP PP RPAREN PUNCTUATION
Rule 13    S -> VP PP ADJP PUNCTUATION
Rule 14    S -> CP VP NP PUNCTUATION
Rule 15    S -> VP VP PUNCTUATION
Rule 16    S -> ADVP PP PUNCTUATION
Rule 17    S -> ADVP LPAREN INTERJECTIONS RPAREN PUNCTUATION
Rule 18    S -> VP LPAREN VP RPAREN PUNCTUATION
Rule 19    S -> ADVP LPAREN INTERJECTIONS NOUNS RPAREN PUNCTUATION
Rule 20    S -> VP VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
Rule 21    S -> VP CP LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION
Rule 22    S -> VP LPAREN VERBS VERBS PP RPAREN PUNCTUATION
Rule 23    ADVP -> ADVERBS NOUNS
Rule 24    ADVP -> ADVERBS VERBS
Rule 25    ADVP -> ADVERBS VERBS ADJP
Rule 26    ADVP -> ADVERBS VERBS ADVERBS
Rule 27    ADVP -> ADVERBS VERBS ADVERBS NOUNS
Rule 28    ADVP -> ADVERBS PP
Rule 29    ADVP -> ADVERBS VERBS DETERMINANT VERBS NOUNS
Rule 30    VP -> VERBS VERBS ADVERBS
Rule 31    VP -> VERBS ADVERBS
Rule 32    VP -> PRONOUNS VERBS PRONOUNS
Rule 33    VP -> PRONOUNS VERBS
Rule 34    VP -> PRONOUNS VERBS VERBS ADVERBS
Rule 35    VP -> VERBS PRONOUNS ADVERBS
Rule 36    VP -> VERBS ADVERBS VERBS
Rule 37    VP -> PRONOUNS VERBS VERBS ADVERBS NOUNS
Rule 38    VP -> VERBS ADJECTIVES NOUNS
Rule 39    VP -> ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
Rule 40    VP -> VERBS NOUNS PP
Rule 41    VP -> VERBS ADJECTIVES
Rule 42    VP -> VERBS PRONOUNS NOUNS ARTICLES VERBS
Rule 43    NP -> NOUNS PREPOSITIONS ADJECTIVES
Rule 44    NP -> PRONOUNS NOUNS
Rule 45    NP -> ARTICLES NOUNS
Rule 46    NP -> DETERMINANT NOUNS
Rule 47    PP -> PREPOSITIONS NP VP
Rule 48    PP -> PREPOSITIONS VERBS
Rule 49    PP -> PREPOSITIONS ADJP
Rule 50    PP -> PREPOSITIONS NP
Rule 51    PP -> PREPOSITIONS NOUNS
Rule 52    PP -> PREPOSITIONS PRONOUNS PRONOUNS NOUNS
Rule 53    PP -> PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
Rule 54    PP -> PREPOSITIONS ARTICLES NOUNS
Rule 55    CP -> CONJUNCTIONS VP
Rule 56    CP -> CONJUNCTIONS CONJUNCTIONS
Rule 57    ADJP -> DETERMINANT ADJECTIVES NOUNS
Rule 58    ADJP -> ARTICLES ADJECTIVES NOUNS
Rule 59    ADJP -> DETERMINANT ADJECTIVES
Rule 60    ADJP -> PRONOUNS ADJECTIVES NOUNS
Rule 61    ADJP -> NOUNS ADJECTIVES

Terminals, with rules where they appear

ADJECTIVES           : 38 41 43 57 58 59 60 61
ADVERBS              : 23 24 25 26 26 27 27 28 29 30 31 34 35 36 37 39
ARTICLES             : 39 42 45 53 54 58
CONJUNCTIONS         : 21 55 56 56
DETERMINANT          : 29 39 46 53 57 59
INTERJECTIONS        : 3 17 19
LPAREN               : 3 4 6 7 8 9 12 17 18 19 20 21 22
NOUNS                : 19 23 27 29 37 38 39 40 42 43 44 45 46 51 52 53 53 54 57 58 60 61
PREPOSITIONS         : 43 47 48 49 50 51 52 53 53 54
PRONOUNS             : 32 32 33 34 35 37 42 44 52 52 60
PUNCTUATION          : 1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
RPAREN               : 3 4 6 7 8 9 12 17 18 19 20 21 22
VERBS                : 22 22 24 25 26 27 29 29 30 30 31 32 33 34 34 35 36 36 37 37 38 39 39 39 40 41 42 42 48
error                : 

Nonterminals, with rules where they appear

ADJP                 : 8 11 13 20 25 49
ADVP                 : 1 1 3 4 5 8 9 9 11 16 17 19 20
CP                   : 2 7 7 14 21
NP                   : 3 10 14 47 50
PP                   : 6 9 10 12 13 16 22 28 40
S                    : 0
VP                   : 2 4 6 8 8 9 10 11 12 12 13 14 15 15 18 18 20 20 20 21 21 22 47 55

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . ADVP PUNCTUATION ADVP PUNCTUATION
    (2) S -> . VP CP PUNCTUATION
    (3) S -> . ADVP LPAREN INTERJECTIONS NP RPAREN PUNCTUATION
    (4) S -> . ADVP LPAREN VP RPAREN PUNCTUATION
    (5) S -> . ADVP PUNCTUATION
    (6) S -> . VP LPAREN PP RPAREN PUNCTUATION
    (7) S -> . CP LPAREN CP RPAREN PUNCTUATION
    (8) S -> . VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (9) S -> . ADVP VP PP LPAREN ADVP RPAREN PUNCTUATION
    (10) S -> . VP NP PP PUNCTUATION
    (11) S -> . VP ADVP ADJP PUNCTUATION
    (12) S -> . VP LPAREN VP PP RPAREN PUNCTUATION
    (13) S -> . VP PP ADJP PUNCTUATION
    (14) S -> . CP VP NP PUNCTUATION
    (15) S -> . VP VP PUNCTUATION
    (16) S -> . ADVP PP PUNCTUATION
    (17) S -> . ADVP LPAREN INTERJECTIONS RPAREN PUNCTUATION
    (18) S -> . VP LPAREN VP RPAREN PUNCTUATION
    (19) S -> . ADVP LPAREN INTERJECTIONS NOUNS RPAREN PUNCTUATION
    (20) S -> . VP VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (21) S -> . VP CP LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION
    (22) S -> . VP LPAREN VERBS VERBS PP RPAREN PUNCTUATION
    (23) ADVP -> . ADVERBS NOUNS
    (24) ADVP -> . ADVERBS VERBS
    (25) ADVP -> . ADVERBS VERBS ADJP
    (26) ADVP -> . ADVERBS VERBS ADVERBS
    (27) ADVP -> . ADVERBS VERBS ADVERBS NOUNS
    (28) ADVP -> . ADVERBS PP
    (29) ADVP -> . ADVERBS VERBS DETERMINANT VERBS NOUNS
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS
    (55) CP -> . CONJUNCTIONS VP
    (56) CP -> . CONJUNCTIONS CONJUNCTIONS

    ADVERBS         shift and go to state 7
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9
    CONJUNCTIONS    shift and go to state 5

    S                              shift and go to state 1
    ADVP                           shift and go to state 2
    VP                             shift and go to state 3
    CP                             shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> ADVP . PUNCTUATION ADVP PUNCTUATION
    (3) S -> ADVP . LPAREN INTERJECTIONS NP RPAREN PUNCTUATION
    (4) S -> ADVP . LPAREN VP RPAREN PUNCTUATION
    (5) S -> ADVP . PUNCTUATION
    (9) S -> ADVP . VP PP LPAREN ADVP RPAREN PUNCTUATION
    (16) S -> ADVP . PP PUNCTUATION
    (17) S -> ADVP . LPAREN INTERJECTIONS RPAREN PUNCTUATION
    (19) S -> ADVP . LPAREN INTERJECTIONS NOUNS RPAREN PUNCTUATION
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS
    (47) PP -> . PREPOSITIONS NP VP
    (48) PP -> . PREPOSITIONS VERBS
    (49) PP -> . PREPOSITIONS ADJP
    (50) PP -> . PREPOSITIONS NP
    (51) PP -> . PREPOSITIONS NOUNS
    (52) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (53) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS

    PUNCTUATION     shift and go to state 10
    LPAREN          shift and go to state 11
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9
    PREPOSITIONS    shift and go to state 14

    VP                             shift and go to state 12
    PP                             shift and go to state 13

state 3

    (2) S -> VP . CP PUNCTUATION
    (6) S -> VP . LPAREN PP RPAREN PUNCTUATION
    (8) S -> VP . VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (10) S -> VP . NP PP PUNCTUATION
    (11) S -> VP . ADVP ADJP PUNCTUATION
    (12) S -> VP . LPAREN VP PP RPAREN PUNCTUATION
    (13) S -> VP . PP ADJP PUNCTUATION
    (15) S -> VP . VP PUNCTUATION
    (18) S -> VP . LPAREN VP RPAREN PUNCTUATION
    (20) S -> VP . VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (21) S -> VP . CP LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION
    (22) S -> VP . LPAREN VERBS VERBS PP RPAREN PUNCTUATION
    (55) CP -> . CONJUNCTIONS VP
    (56) CP -> . CONJUNCTIONS CONJUNCTIONS
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS
    (43) NP -> . NOUNS PREPOSITIONS ADJECTIVES
    (44) NP -> . PRONOUNS NOUNS
    (45) NP -> . ARTICLES NOUNS
    (46) NP -> . DETERMINANT NOUNS
    (23) ADVP -> . ADVERBS NOUNS
    (24) ADVP -> . ADVERBS VERBS
    (25) ADVP -> . ADVERBS VERBS ADJP
    (26) ADVP -> . ADVERBS VERBS ADVERBS
    (27) ADVP -> . ADVERBS VERBS ADVERBS NOUNS
    (28) ADVP -> . ADVERBS PP
    (29) ADVP -> . ADVERBS VERBS DETERMINANT VERBS NOUNS
    (47) PP -> . PREPOSITIONS NP VP
    (48) PP -> . PREPOSITIONS VERBS
    (49) PP -> . PREPOSITIONS ADJP
    (50) PP -> . PREPOSITIONS NP
    (51) PP -> . PREPOSITIONS NOUNS
    (52) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (53) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS

    LPAREN          shift and go to state 17
    CONJUNCTIONS    shift and go to state 5
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 21
    ARTICLES        shift and go to state 23
    NOUNS           shift and go to state 22
    DETERMINANT     shift and go to state 24
    ADVERBS         shift and go to state 7
    PREPOSITIONS    shift and go to state 14

    VP                             shift and go to state 15
    CP                             shift and go to state 16
    PP                             shift and go to state 18
    ADVP                           shift and go to state 19
    NP                             shift and go to state 20

state 4

    (7) S -> CP . LPAREN CP RPAREN PUNCTUATION
    (14) S -> CP . VP NP PUNCTUATION
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    LPAREN          shift and go to state 25
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 26

state 5

    (55) CP -> CONJUNCTIONS . VP
    (56) CP -> CONJUNCTIONS . CONJUNCTIONS
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    CONJUNCTIONS    shift and go to state 27
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 28

state 6

    (30) VP -> VERBS . VERBS ADVERBS
    (31) VP -> VERBS . ADVERBS
    (35) VP -> VERBS . PRONOUNS ADVERBS
    (36) VP -> VERBS . ADVERBS VERBS
    (38) VP -> VERBS . ADJECTIVES NOUNS
    (40) VP -> VERBS . NOUNS PP
    (41) VP -> VERBS . ADJECTIVES
    (42) VP -> VERBS . PRONOUNS NOUNS ARTICLES VERBS

    VERBS           shift and go to state 29
    ADVERBS         shift and go to state 30
    PRONOUNS        shift and go to state 31
    ADJECTIVES      shift and go to state 32
    NOUNS           shift and go to state 33


state 7

    (23) ADVP -> ADVERBS . NOUNS
    (24) ADVP -> ADVERBS . VERBS
    (25) ADVP -> ADVERBS . VERBS ADJP
    (26) ADVP -> ADVERBS . VERBS ADVERBS
    (27) ADVP -> ADVERBS . VERBS ADVERBS NOUNS
    (28) ADVP -> ADVERBS . PP
    (29) ADVP -> ADVERBS . VERBS DETERMINANT VERBS NOUNS
    (47) PP -> . PREPOSITIONS NP VP
    (48) PP -> . PREPOSITIONS VERBS
    (49) PP -> . PREPOSITIONS ADJP
    (50) PP -> . PREPOSITIONS NP
    (51) PP -> . PREPOSITIONS NOUNS
    (52) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (53) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS

    NOUNS           shift and go to state 34
    VERBS           shift and go to state 35
    PREPOSITIONS    shift and go to state 14

    PP                             shift and go to state 36

state 8

    (32) VP -> PRONOUNS . VERBS PRONOUNS
    (33) VP -> PRONOUNS . VERBS
    (34) VP -> PRONOUNS . VERBS VERBS ADVERBS
    (37) VP -> PRONOUNS . VERBS VERBS ADVERBS NOUNS

    VERBS           shift and go to state 37


state 9

    (39) VP -> ARTICLES . NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT

    NOUNS           shift and go to state 38


state 10

    (1) S -> ADVP PUNCTUATION . ADVP PUNCTUATION
    (5) S -> ADVP PUNCTUATION .
    (23) ADVP -> . ADVERBS NOUNS
    (24) ADVP -> . ADVERBS VERBS
    (25) ADVP -> . ADVERBS VERBS ADJP
    (26) ADVP -> . ADVERBS VERBS ADVERBS
    (27) ADVP -> . ADVERBS VERBS ADVERBS NOUNS
    (28) ADVP -> . ADVERBS PP
    (29) ADVP -> . ADVERBS VERBS DETERMINANT VERBS NOUNS

    $end            reduce using rule 5 (S -> ADVP PUNCTUATION .)
    ADVERBS         shift and go to state 7

    ADVP                           shift and go to state 39

state 11

    (3) S -> ADVP LPAREN . INTERJECTIONS NP RPAREN PUNCTUATION
    (4) S -> ADVP LPAREN . VP RPAREN PUNCTUATION
    (17) S -> ADVP LPAREN . INTERJECTIONS RPAREN PUNCTUATION
    (19) S -> ADVP LPAREN . INTERJECTIONS NOUNS RPAREN PUNCTUATION
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    INTERJECTIONS   shift and go to state 40
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 41

state 12

    (9) S -> ADVP VP . PP LPAREN ADVP RPAREN PUNCTUATION
    (47) PP -> . PREPOSITIONS NP VP
    (48) PP -> . PREPOSITIONS VERBS
    (49) PP -> . PREPOSITIONS ADJP
    (50) PP -> . PREPOSITIONS NP
    (51) PP -> . PREPOSITIONS NOUNS
    (52) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (53) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS

    PREPOSITIONS    shift and go to state 14

    PP                             shift and go to state 42

state 13

    (16) S -> ADVP PP . PUNCTUATION

    PUNCTUATION     shift and go to state 43


state 14

    (47) PP -> PREPOSITIONS . NP VP
    (48) PP -> PREPOSITIONS . VERBS
    (49) PP -> PREPOSITIONS . ADJP
    (50) PP -> PREPOSITIONS . NP
    (51) PP -> PREPOSITIONS . NOUNS
    (52) PP -> PREPOSITIONS . PRONOUNS PRONOUNS NOUNS
    (53) PP -> PREPOSITIONS . ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> PREPOSITIONS . ARTICLES NOUNS
    (43) NP -> . NOUNS PREPOSITIONS ADJECTIVES
    (44) NP -> . PRONOUNS NOUNS
    (45) NP -> . ARTICLES NOUNS
    (46) NP -> . DETERMINANT NOUNS
    (57) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (58) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (59) ADJP -> . DETERMINANT ADJECTIVES
    (60) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (61) ADJP -> . NOUNS ADJECTIVES

    VERBS           shift and go to state 45
    NOUNS           shift and go to state 47
    PRONOUNS        shift and go to state 48
    ARTICLES        shift and go to state 49
    DETERMINANT     shift and go to state 50

    NP                             shift and go to state 44
    ADJP                           shift and go to state 46

state 15

    (8) S -> VP VP . ADJP LPAREN ADVP RPAREN PUNCTUATION
    (15) S -> VP VP . PUNCTUATION
    (20) S -> VP VP . VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (57) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (58) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (59) ADJP -> . DETERMINANT ADJECTIVES
    (60) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (61) ADJP -> . NOUNS ADJECTIVES
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    PUNCTUATION     shift and go to state 53
    DETERMINANT     shift and go to state 54
    ARTICLES        shift and go to state 56
    PRONOUNS        shift and go to state 57
    NOUNS           shift and go to state 55
    VERBS           shift and go to state 6

    VP                             shift and go to state 51
    ADJP                           shift and go to state 52

state 16

    (2) S -> VP CP . PUNCTUATION
    (21) S -> VP CP . LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION

    PUNCTUATION     shift and go to state 58
    LPAREN          shift and go to state 59


state 17

    (6) S -> VP LPAREN . PP RPAREN PUNCTUATION
    (12) S -> VP LPAREN . VP PP RPAREN PUNCTUATION
    (18) S -> VP LPAREN . VP RPAREN PUNCTUATION
    (22) S -> VP LPAREN . VERBS VERBS PP RPAREN PUNCTUATION
    (47) PP -> . PREPOSITIONS NP VP
    (48) PP -> . PREPOSITIONS VERBS
    (49) PP -> . PREPOSITIONS ADJP
    (50) PP -> . PREPOSITIONS NP
    (51) PP -> . PREPOSITIONS NOUNS
    (52) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (53) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS
    (30) VP -> . VERBS VERBS ADVERBS
    (31) VP -> . VERBS ADVERBS
    (32) VP -> . PRONOUNS VERBS PRONOUNS
    (33) VP -> . PRONOUNS VERBS
    (34) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (35) VP -> . VERBS PRONOUNS ADVERBS
    (36) VP -> . VERBS ADVERBS VERBS
    (37) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (38) VP -> . VERBS ADJECTIVES NOUNS
    (39) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (40) VP -> . VERBS NOUNS PP
    (41) VP -> . VERBS ADJECTIVES
    (42) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    VERBS           shift and go to state 62
    PREPOSITIONS    shift and go to state 14
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 60
    PP                             shift and go to state 61

state 18

    (13) S -> VP PP . ADJP PUNCTUATION
    (57) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (58) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (59) ADJP -> . DETERMINANT ADJECTIVES
    (60) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (61) ADJP -> . NOUNS ADJECTIVES

    DETERMINANT     shift and go to state 54
    ARTICLES        shift and go to state 64
    PRONOUNS        shift and go to state 65
    NOUNS           shift and go to state 55

    ADJP                           shift and go to state 63

state 19

    (11) S -> VP ADVP . ADJP PUNCTUATION
    (57) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (58) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (59) ADJP -> . DETERMINANT ADJECTIVES
    (60) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (61) ADJP -> . NOUNS ADJECTIVES

    DETERMINANT     shift and go to state 54
    ARTICLES        shift and go to state 64
    PRONOUNS        shift and go to state 65
    NOUNS           shift and go to state 55

    ADJP                           shift and go to state 66

state 20

    (10) S -> VP NP . PP PUNCTUATION
    (47) PP -> . PREPOSITIONS NP VP
    (48) PP -> . PREPOSITIONS VERBS
    (49) PP -> . PREPOSITIONS ADJP
    (50) PP -> . PREPOSITIONS NP
    (51) PP -> . PREPOSITIONS NOUNS
    (52) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (53) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS

    PREPOSITIONS    shift and go to state 14

    PP                             shift and go to state 67

state 21

    (32) VP -> PRONOUNS . VERBS PRONOUNS
    (33) VP -> PRONOUNS . VERBS
    (34) VP -> PRONOUNS . VERBS VERBS ADVERBS
    (37) VP -> PRONOUNS . VERBS VERBS ADVERBS NOUNS
    (44) NP -> PRONOUNS . NOUNS

    VERBS           shift and go to state 37
    NOUNS           shift and go to state 68


state 22

    (43) NP -> NOUNS . PREPOSITIONS ADJECTIVES

    PREPOSITIONS    shift and go to state 69


state 23

    (39) VP -> ARTICLES . NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (45) NP -> ARTICLES . NOUNS

    NOUNS           shift and go to state 70


state 24

    (46) NP -> DETERMINANT . NOUNS

    NOUNS           shift and go to state 71


state 25

    (7) S -> CP LPAREN . CP RPAREN PUNCTUATION
    (55) CP -> . CONJUNCTIONS VP
    (56) CP -> . CONJUNCTIONS CONJUNCTIONS

    CONJUNCTIONS    shift and go to state 5

    CP                             shift and go to state 72

state 26

    (14) S -> CP VP . NP PUNCTUATION
    (43) NP -> . NOUNS PREPOSITIONS ADJECTIVES
    (44) NP -> . PRONOUNS NOUNS
    (45) NP -> . ARTICLES NOUNS
    (46) NP -> . DETERMINANT NOUNS

    NOUNS           shift and go to state 22
    PRONOUNS        shift and go to state 74
    ARTICLES        shift and go to state 75
    DETERMINANT     shift and go to state 24

    NP                             shift and go to state 73

state 27

    (56) CP -> CONJUNCTIONS CONJUNCTIONS .

    LPAREN          reduce using rule 56 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    VERBS           reduce using rule 56 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    PRONOUNS        reduce using rule 56 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    ARTICLES        reduce using rule 56 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    PUNCTUATION     reduce using rule 56 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    RPAREN          reduce using rule 56 (CP -> CONJUNCTIONS CONJUNCTIONS .)


state 28

    (55) CP -> CONJUNCTIONS VP .

    LPAREN          reduce using rule 55 (CP -> CONJUNCTIONS VP .)
    VERBS           reduce using rule 55 (CP -> CONJUNCTIONS VP .)
    PRONOUNS        reduce using rule 55 (CP -> CONJUNCTIONS VP .)
    ARTICLES        reduce using rule 55 (CP -> CONJUNCTIONS VP .)
    PUNCTUATION     reduce using rule 55 (CP -> CONJUNCTIONS VP .)
    RPAREN          reduce using rule 55 (CP -> CONJUNCTIONS VP .)


state 29

    (30) VP -> VERBS VERBS . ADVERBS

    ADVERBS         shift and go to state 76


state 30

    (31) VP -> VERBS ADVERBS .
    (36) VP -> VERBS ADVERBS . VERBS

  ! shift/reduce conflict for VERBS resolved as shift
    LPAREN          reduce using rule 31 (VP -> VERBS ADVERBS .)
    CONJUNCTIONS    reduce using rule 31 (VP -> VERBS ADVERBS .)
    PRONOUNS        reduce using rule 31 (VP -> VERBS ADVERBS .)
    ARTICLES        reduce using rule 31 (VP -> VERBS ADVERBS .)
    NOUNS           reduce using rule 31 (VP -> VERBS ADVERBS .)
    DETERMINANT     reduce using rule 31 (VP -> VERBS ADVERBS .)
    ADVERBS         reduce using rule 31 (VP -> VERBS ADVERBS .)
    PREPOSITIONS    reduce using rule 31 (VP -> VERBS ADVERBS .)
    PUNCTUATION     reduce using rule 31 (VP -> VERBS ADVERBS .)
    RPAREN          reduce using rule 31 (VP -> VERBS ADVERBS .)
    VERBS           shift and go to state 77

  ! VERBS           [ reduce using rule 31 (VP -> VERBS ADVERBS .) ]


state 31

    (35) VP -> VERBS PRONOUNS . ADVERBS
    (42) VP -> VERBS PRONOUNS . NOUNS ARTICLES VERBS

    ADVERBS         shift and go to state 78
    NOUNS           shift and go to state 79


state 32

    (38) VP -> VERBS ADJECTIVES . NOUNS
    (41) VP -> VERBS ADJECTIVES .
